--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       body {
         
         flex-wrap: wrap;
-        background-image: url("メンバー/画像/乃木坂ロゴ.jpg" );
+        background-image: url("https://github.com/udon0141/QQ6_D/blob/master/%E4%B9%83%E6%9C%A8%E5%9D%82%E3%83%AD%E3%82%B3%E3%82%99.jpg?raw=true.jpg" );
         background-size: 300px 300px;
         background-repeat: no-repeat;
        }
@@ -51,11 +51,11 @@
       const get2 = document.getElementById('target2')
       
       get1.addEventListener('click', () =>{
-          window.location.href='メンバー/岩本蓮加.html';
+          window.location.href='https://udon0141.github.io/result5/';
       }
       );
       get2.addEventListener('click', () =>{
-          window.location.href='問7_C.html';
+          window.location.href='https://udon0141.github.io/QQ7_C/';
       }
       );
 
